fixed submit box alignment issue

--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ border-color: white;
 
     .submit  {
       width: 80vw;
-      align: center;
+      box-align: center;
       background-color: black;
       border: solid white;
       display: block;
